# cervo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: generate.sh
benchmarks/perf-test/: Cargo.toml  output.csv  output1.csv  output2.csv  output3.csv  output_n.csv  output_n_fixed.csv  output_n_fixed_noop.csv  output_r.csv
benchmarks/perf-test/src/: compare_batchers.rs  compare_batchsize.rs  compare_loading.rs  compare_noise.rs  compare_threading.rs  helpers.rs  main.rs
benchmarks/python/: batchers.py  batchsize.py  check_deps.py  compare_batchsize.py  compare_threading.py  load_times.py  loaders.py  noise.py  perstep.py
brains/: README.md  Regenerate.sh  test-complex.nnef  test-complex.nnef.tar  test-complex.onnx  test-nnef.crvo  test-recurrent-nnef.crvo  test-recurrent.nnef.tar  test-recurrent.onnx  test.crvo  test.nnef  test.nnef.tar  test.onnx
crates/cervo/: Cargo.toml  release.toml
crates/cervo-asset/: Cargo.toml
crates/cervo-asset/src/: lib.rs
crates/cervo-asset/tests/: asset-data.rs  helpers.rs  infer-simple.rs  load-simple.rs  to-nnef.rs
crates/cervo-cli/: Cargo.toml
crates/cervo-cli/fb/: build.sh  request.capnp  request.fbs  response.fbs  types.fbs
crates/cervo-cli/python/: loadtest.py  request_capnp.py  request_capnp.pyi
crates/cervo-cli/python/messages/cervo/: DataInstance.py  NamedFloatList.py  Request.py  Response.py
crates/cervo-cli/src/: commands.rs  main.rs
crates/cervo-cli/src/commands/: api.rs  benchmark.rs  describe.rs  import.rs  package.rs  run.rs  serve.rs  test-client.py  to_nnef.rs
crates/cervo-cli/src/commands/serve/: request_capnp.rs  request_generated.rs  response_generated.rs  types_generated.rs
crates/cervo-core/: Cargo.toml
crates/cervo-core/src/: batcher.rs  epsilon.rs  inferer.rs  lib.rs  model.rs  model_api.rs  recurrent.rs  wrapper.rs
crates/cervo-core/src/batcher/: scratch.rs  wrapper.rs
crates/cervo-core/src/inferer/: basic.rs  direct.rs  dynamic.rs  fixed.rs  helpers.rs  memoizing.rs
crates/cervo-core/tests/: batcher.rs
crates/cervo-nnef/: Cargo.toml  test.onnx
crates/cervo-nnef/src/: lib.rs
crates/cervo-nnef/tests/: helpers.rs  infer-complex.rs  infer-simple.rs  load-complex.rs  load-simple.rs
crates/cervo-onnx/: Cargo.toml
crates/cervo-onnx/src/: lib.rs
crates/cervo-onnx/tests/: helpers.rs  infer-complex.rs  infer-lstm.rs  infer-simple.rs  load-complex.rs  load-simple.rs  to-nnef.rs
crates/cervo-runtime/: Cargo.toml
crates/cervo-runtime/src/: error.rs  lib.rs  runtime.rs  state.rs  timing.rs
crates/cervo-runtime/src/runtime/: ticket.rs
crates/cervo/src/: commands.rs  inferer.rs  lib.rs
crates/cervo/src/commands/: api.rs  benchmark.rs  describe.rs  import.rs  package.rs  run.rs  to_nnef.rs
crates/tractor/: Cargo.toml
crates/tractor-cli/: Cargo.toml
crates/tractor-cli/src/: commands.rs  main.rs
crates/tractor-cli/src/commands/: api.rs  describe.rs  import.rs  package.rs  to_nnef.rs
crates/tractor-nnef/: Cargo.toml  test-complex.onnx
crates/tractor-nnef/src/: lib.rs
crates/tractor-nnef/tests/: helpers.rs  infer-complex.rs  infer-simple.rs  load-complex.rs  load-simple.rs
crates/tractor-onnx/: Cargo.toml
crates/tractor-onnx/src/: lib.rs
crates/tractor-onnx/tests/: helpers.rs  infer-complex.rs  infer-simple.rs  load-complex.rs  load-simple.rs  to-nnef.rs
crates/tractor/src/: basic.rs  dynamic.rs  epsilon.rs  fixed.rs  inferer.rs  lib.rs  model_api.rs  tract_wrap.rs
crates/tractor/src/inferer/: basic.rs  dynamic.rs  fixed.rs  helpers.rs
docs/: threading.md
python/: perstep.py  plot.py  steptime.csv  steptime2.csv  steptime3.csv  steptime4.csv
