[workspace]
members = [
    "crates/cervo",
    "crates/cervo-cli",
    "crates/cervo-asset",
    "crates/cervo-core",
    "crates/cervo-nnef",
    "crates/cervo-onnx",
    "crates/cervo-runtime",
]

exclude = [ "benchmarks/perf-test" ]
resolver = "2"

[workspace.dependencies]
tract-core = { version = "0.21,<0.21.6" }
tract-hir = { version = "0.21,<0.21.6" }
tract-nnef = { version = "0.21,<0.21.6" }
tract-onnx =  { version = "0.21,<0.21.6" }
