[workspace]
members = [
    "crates/cervo",
    "crates/cervo-cli",
    "crates/cervo-asset",
    "crates/cervo-core",
    "crates/cervo-nnef",
    "crates/cervo-onnx",
    "crates/cervo-runtime",
]

exclude = [ "benchmarks/perf-test" ]
resolver = "2"

[workspace.dependencies]
tract-core = { version = "0.21.8-pre" }
tract-hir = { version = "0.21.8-pre" }
tract-nnef = { version = "0.21.8-pre" }
tract-onnx =  { version = "0.21.8-pre" }

[patch.crates-io]
tract-core = { git = "https://github.com/sonos/tract", rev="8bf74faa18e6f1cf8fd85829e45859282083f9e1" }
tract-hir = { git = "https://github.com/sonos/tract", rev="8bf74faa18e6f1cf8fd85829e45859282083f9e1" }
tract-nnef = { git = "https://github.com/sonos/tract", rev="8bf74faa18e6f1cf8fd85829e45859282083f9e1" }
tract-onnx =  { git = "https://github.com/sonos/tract", rev="8bf74faa18e6f1cf8fd85829e45859282083f9e1" }
