[workspace]
members = [
    "crates/cervo",
    "crates/cervo-cli",
    "crates/cervo-asset",
    "crates/cervo-core",
    "crates/cervo-nnef",
    "crates/cervo-onnx",
    "crates/cervo-runtime",
]

exclude = [ "benchmarks/perf-test" ]
resolver = "2"

[workspace.dependencies]
tract-core = { version = "0.21.8-pre" }
tract-hir = { version = "0.21.8-pre" }
tract-nnef = { version = "0.21.8-pre" }
tract-onnx =  { version = "0.21.8-pre" }

[patch.crates-io]
tract-core = { path = "../tract/core" }
tract-hir = { path = "../tract/hir" }
tract-nnef = { path = "../tract/nnef" }
tract-onnx =  { path = "../tract/onnx" }
