[package]
name = "perf-test"
version = "0.0.0"
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

anyhow = { version = "1.0"}
cervo-onnx = { path = "../../crates/cervo-onnx" }
cervo-nnef = { path = "../../crates/cervo-nnef" }
cervo-core = { path = "../../crates/cervo-core" }
perchance = "0.3"
