[package]
name = "perf-test"
version = "0.0.0"
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

anyhow = { version = "1.0"}
cervo-onnx = { path = "../../crates/cervo-onnx" }
cervo-nnef = { path = "../../crates/cervo-nnef" }
cervo-core = { path = "../../crates/cervo-core" }
cervo-runtime = { path = "../../crates/cervo-runtime", features = ["threaded"] }
perchance = { version = "0.4", default-features = false }
rayon = { version = "1.5"}
liquid-core = "=0.26.0"

[patch.crates-io]
tract-onnx = { version="0.19.3-pre", git = "https://github.com/sonos/tract", rev = "e8f82bcfe250e0786ea4cd0df049c3d4faf064b4" }
tract-nnef = { version="0.19.3-pre", git = "https://github.com/sonos/tract", rev = "e8f82bcfe250e0786ea4cd0df049c3d4faf064b4" }
tract-hir = { version="0.19.3-pre", git = "https://github.com/sonos/tract", rev = "e8f82bcfe250e0786ea4cd0df049c3d4faf064b4" }
tract-core = { version="0.19.3-pre", git = "https://github.com/sonos/tract", rev = "e8f82bcfe250e0786ea4cd0df049c3d4faf064b4" }
