[package]
name = "cervo-asset"
version = "0.1.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com",
]
license = "LicenseRef-Embark-Proprietary"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
cervo-onnx = { version = "0.1.0", path = "../cervo-onnx" }
cervo-nnef = { version = "0.1.0", path = "../cervo-nnef" }
cervo-core = { version = "0.0.0", path = "../cervo-core" }
