[package]
name = "cervo-asset"
version = "0.1.1-alpha.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com",
]
license = "MIT OR Apache-2.0"
description = "A unified asset type for Cervo using ONNX or NNEF models."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference" ]
categories = [ "science" ]
readme = "../../README.md"

[dependencies]
anyhow = "1.0.57"
cervo-onnx = { version = "0.1.1-alpha.0", path = "../cervo-onnx" }
cervo-nnef = { version = "0.2.0", path = "../cervo-nnef" }
cervo-core = { version = "0.2.0", path = "../cervo-core" }
