[package]
name = "cervo-cli"
version = "0.6.0"
edition = "2021"
authors = ["Tom Solberg <tom.solberg@emark-studios.com"]
license = "MIT OR Apache-2.0"
description = "High level APIs for RL in games."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference" ]
categories = [ "science" ]
readme = "../../README.md"

# this ensures cargo run in the workspace root uses cervo-cli
default-run = "cervo"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4", features = ["derive"] }
log = "0.4"
tempfile = "3.4"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

cervo = { version = "0.6.0", path = "../cervo" }
tiny_http = { version = "0.12.0", optional = true }
flatbuffers = { version = "24.3.25", optional = true }

[[bin]]
name = "cervo"
path = "src/main.rs"

[features]
default = ["serve"]
serve = ["tiny_http", "flatbuffers"]
