[package]
name = "cervo-cli"
version = "0.9.0"
edition = "2021"
authors = ["Tom Solberg <tom.solberg@emark-studios.com"]
license = "MIT OR Apache-2.0"
description = "High level APIs for RL in games."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference" ]
categories = [ "science" ]
readme = "../../README.md"

# this ensures cargo run in the workspace root uses cervo-cli
default-run = "cervo"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4", features = ["derive"] }
log = "0.4"
tempfile = "3.4"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cervo = { version = "0.9.0", path = "../cervo" }

[[bin]]
name = "cervo"
path = "src/main.rs"
