[package]
name = "cervo-core"
version = "0.0.1"
edition = "2018"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com",
    "Henrik Rydgård <hrydgard@embark-studios.com>"
]
license = "MIT OR Apache-2.0"
description = "High level APIs for RL in games."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference" ]
categories = [ "science" ]
edition = "2021"

[dependencies]
anyhow = { version = "1.0"}
tract-core =  { version = "0.16.7" }
tract-hir =  { version = "0.16.7" }
rand = { version = "0.8.2" }
rand_distr = { version = "0.4" }
perchance = { version = "^0.3"}
