[package]
name = "cervo-core"
version = "0.3.1-alpha.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com",
    "Henrik Rydgård <hrydgard@embark-studios.com>"
]
license = "MIT OR Apache-2.0"
description = "High level APIs for RL in games."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference" ]
categories = [ "science" ]

readme = "../../README.md"

[dependencies]
anyhow = { version = "1.0"}
tract-core =  { version = "0.17.1" }
tract-hir =  { version = "0.17.1" }
rand = { version = "0.8.2" }
rand_distr = { version = "0.4" }
perchance = { version = "^0.3"}
parking_lot = "0.12"
