[package]
name = "cervo-nnef"
version = "0.0.1"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com"
]
license = "MIT OR Apache-2.0"
description = "Extends cervo with nnef support from tract-nnef."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference", "nnef" ]
categories = [ "science" ]
edition = "2018"
readme = "../../README.md"

[dependencies]
anyhow = "1.0.57"
tract-onnx =  { version = "0.16.7" }
tract-nnef = { version = "0.16.7" }
tract-hir = { version = "0.16.7" }
cervo-core = { version="0.0.1", path = "../cervo-core" }
once_cell = "1.10"
