[package]
name = "cervo-nnef"
version = "0.1.1-alpha.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com"
]
license = "MIT OR Apache-2.0"
description = "Extends cervo with nnef support from tract-nnef."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference", "nnef" ]
categories = [ "science" ]
readme = "../../README.md"

[dependencies]
anyhow = "1.0.57"
tract-onnx =  { version = "0.17.1" }
tract-nnef = { version = "0.17.1" }
tract-hir = { version = "0.17.1" }
cervo-core = { version= "0.1.1-alpha.0", path = "../cervo-core" }
lazy_static = "1.4"
