[package]
name = "cervo-nnef"
version = "0.9.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com"
]
license = "MIT OR Apache-2.0"
description = "Extends cervo with nnef support from tract-nnef."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference", "nnef" ]
categories = [ "science" ]
readme = "../../README.md"

[dependencies]
anyhow = "1.0.57"
tract-onnx =  { workspace = true }
tract-nnef = { workspace = true }
tract-hir = { workspace = true }
lazy_static = "1.4"

cervo-core = { version= "0.9.0", path = "../cervo-core" }
