[package]
name = "cervo-onnx"
version = "0.1.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com"
]
license = "LicenseRef-Embark-Proprietary"

[dependencies]
anyhow = "1.0.57"
tract-onnx =  { version = "0.16.7" }
tract-nnef = { version = "0.16.7" }
cervo-core = { path = "../cervo-core" }
