[package]
name = "cervo-onnx"
version = "0.8.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com"
]
license = "MIT OR Apache-2.0"
description = "Extends cervo with ONNX support from tract-onnx."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference", "onnx" ]
categories = [ "science" ]
readme = "../../README.md"

[dependencies]
anyhow = "1.0.57"
tract-onnx =  { workspace = true }
tract-nnef = { workspace = true }
cervo-core = { version = "0.8.0", path = "../cervo-core" }
