[package]
name = "cervo-runtime"
version = "0.3.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com",
]
license = "MIT OR Apache-2.0"
description = "Multi-model multi-agent RL runtime for games."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference" ]
categories = [ "science" ]

readme = "../../README.md"

[dependencies]
cervo-core = { version = "0.3.0", path = "../cervo-core"}
thiserror = "1.0"
anyhow = "1.0.41"

[dev-dependencies]
cervo-asset = { version = "0.3.0", path = "../cervo-asset"}
