[package]
name = "cervo-runtime"
version = "0.7.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com",
]
license = "MIT OR Apache-2.0"
description = "Multi-model multi-agent RL runtime for games."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference" ]
categories = [ "science" ]

readme = "../../README.md"

[dependencies]
cervo-core = { version = "0.7.0", path = "../cervo-core"}
thiserror = "1.0"
anyhow = "1.0.41"
rayon = { version = "1.5", optional = true }

[dev-dependencies]
cervo-asset = { version = "0.7.0", path = "../cervo-asset"}

[features]
threaded = ["rayon"]
default = [] 
