[package]
name = "cervo"
version = "0.2.1-alpha.0"
edition = "2021"
authors = ["Tom Solberg <tom.solberg@emark-studios.com"]
license = "MIT OR Apache-2.0"
description = "High level APIs for RL in games."
repository = "https://github.com/EmbarkStudios/cervo"
keywords = [ "machinelearning", "inference" ]
categories = [ "science" ]
readme = "../../README.md"

# this ensures cargo run in the workspace root uses cervo-cli
default-run = "cervo"


[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4"
tempfile = "3.3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
cervo-onnx = { version = "0.3.0", path = "../cervo-onnx" }
cervo-nnef = { version = "0.3.0", path = "../cervo-nnef" }
cervo-asset = { version = "0.2.1-alpha.0", path = "../cervo-asset" }
cervo-core = { version = "0.3.0", path = "../cervo-core" }
cervo-runtime = { version = "0.2.1-alpha.0", path = "../cervo-runtime" }

[lib]
name = "cervo"
path = "src/lib.rs"

[[bin]]
name = "cervo"
path = "src/main.rs"
