[package]
name = "tractor-onnx"
version = "0.1.0"
edition = "2021"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tract-onnx =  { version = "0.16.7-pre", git = "https://github.com/sonos/tract" }    # { version = "^0.16" }
tract-nnef = { version = "0.16.7-pre", git = "https://github.com/sonos/tract" }
tractor = { path = "../tractor" }
