[package]
name = "tractor"
version = "0.0.0"
edition = "2018"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com",
    "Henrik Rydgård <hrydgard@embark-studios.com>"
]

[dependencies]
anyhow = { version = "1.0"}
tract-core = "^0.16"
tract-hir = "^0.16"
rand = { version = "0.8.2" }
rand_distr = { version = "0.4" }
