[package]
name = "tractor"
version = "0.0.0"
edition = "2018"
authors = [
    "Tom Solberg <tom.solberg@embark-studios.com",
    "Henrik Rydgård <hrydgard@embark-studios.com>"
]
license = "LicenseRef-Embark-Proprietary"

[dependencies]
anyhow = { version = "1.0"}
tract-core =  { version = "0.16.7-pre", git = "https://github.com/sonos/tract" }
tract-hir =  { version = "0.16.7-pre", git = "https://github.com/sonos/tract" }
rand = { version = "0.8.2" }
rand_distr = { version = "0.4" }
perchance = { version = "^0.3"}
